kube/default_cave/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roguelike-service
spec:
  selector:
    app: roguelike
  ports:
    - protocol: TCP
      port: 3000
