kube/default_cave/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: roguelike
spec:
  to:
    kind: Service
    name: roguelike-service
  port:
    targetPort: 3000
